--- a/server/env.example
+++ b/server/env.example
@@ -14,7 +14,7 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASSWORD=your-app-password
-ADMIN_EMAIL=suryaraj@prorecruittechnologies.com
+ADMIN_EMAIL=info@prorecruittechnologies.com
 
 # Google APIs Configuration (Optional)
 GOOGLE_CLIENT_ID=your-google-client-id
