Add EJS for email templates as alternative

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
+    "ejs": "^3.1.9",
     "express-validator": "^7.0.1",
     "express-rate-limit": "^7.1.4",
     "helmet": "^7.1.0",
